--- a/index.html/index.html
+++ b/index.html/index.html
@@ -58,5 +58,18 @@
                                 <h4>Medication and Supplements</h4>
                                 <p>Take any prescribed medications and/or supplements</p>
                             </div>
+                            <div class="template-card" data-template="exercise">
+                                <i class="fas fa-walking"></i>
+                                <h4>Exercise</h4>
+                                <p>Get that body moving! Dance, walk or stretch. Whatever feels good!</p>
+                            </div>
+                            <div class="template-card" data-template="Social"
+                                <i class="fas fa-users"></i>
+                                <h4>Social Connection</h4>
+                                <p>Try talking to a friend or text a support line because you still deserve to be heard when no one is around.
+                                <a href="https://www.campaigntoendloneliness.org/feeling-lonely/helpful-links/">
+                                  Helpful resources 
+                                </a>
+                            </p>
 
     </body>
