--- a/index.html/index.html
+++ b/index.html/index.html
@@ -63,13 +63,45 @@
                                 <h4>Exercise</h4>
                                 <p>Get that body moving! Dance, walk or stretch. Whatever feels good!</p>
                             </div>
-                            <div class="template-card" data-template="Social"
+                            <div class="template-card" data-template="Social">
                                 <i class="fas fa-users"></i>
                                 <h4>Social Connection</h4>
                                 <p>Try talking to a friend or text a support line because you still deserve to be heard when no one is around.
                                 <a href="https://www.campaigntoendloneliness.org/feeling-lonely/helpful-links/">
                                   Helpful resources 
                                 </a>
-                            </p>
+                                </p>
+                            </div>
+                            <div class="template-card" data-template="hobby">
+                                <i class="fas fa-palette"></i>
+                                <h4>Creative Hobbys</h4>
+                                <p> Develop your imaginary skills through drawing, writing or crafts</p>
+                            </div>
+                            <div class="template-card" data-template="learning">
+                                <i class="fas fa-book"></i>
+                                <h4>Learning<h4>
+                                    <p>Garner Knowledge in areas of intrest
+                                        <a href="https://www.khanacademy.org/">Khan Academy
+                                        </a>
+                                    </p>
+                                </div>
+                                <div class="template-card" data-template="self-care">
+                                    <i class="fas fa-heart"></i>
+                                    <h4>Self-Care<h4>
+                                        <p>Relax and do something that makes you feel taken care of! Paint your nails, curate a new wardrobe or hug a plushie</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
 
-    </body>
+
+
+
+
+
+
+
+
+
+
+
