updated energy slider

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -47,52 +47,72 @@
 
                     <div class="task-templates">
                         <h3>Task Templates</h3>
-                        <div class="template-grid">
-                            <div class="template-card" data-template="Hygiene">
-                               <i class="fas fa-shower"></i>
-                               <h4>Personal Hygiene</h4>
-                               <p>Brush teeth, shower, skincare and get dressed</p>
-                            </div>
-                            <div class="template-card" data-template="Medication and Supplements">
-                                <i class="fas fa-pills"></i>
-                                <h4>Medication and Supplements</h4>
-                                <p>Take any prescribed medications and/or supplements</p>
-                            </div>
-                            <div class="template-card" data-template="exercise">
-                                <i class="fas fa-walking"></i>
-                                <h4>Exercise</h4>
-                                <p>Get that body moving! Dance, walk or stretch. Whatever feels good!</p>
-                            </div>
-                            <div class="template-card" data-template="Social">
-                                <i class="fas fa-users"></i>
-                                <h4>Social Connection</h4>
-                                <p>Try talking to a friend or text a support line because you still deserve to be heard when no one is around.
-                                <a href="https://www.campaigntoendloneliness.org/feeling-lonely/helpful-links/">
-                                  Helpful resources 
-                                </a>
-                                </p>
-                            </div>
-                            <div class="template-card" data-template="hobby">
-                                <i class="fas fa-palette"></i>
-                                <h4>Creative Hobbys</h4>
-                                <p> Develop your imaginary skills through drawing, writing or crafts</p>
-                            </div>
-                            <div class="template-card" data-template="learning">
-                                <i class="fas fa-book"></i>
-                                <h4>Learning<h4>
-                                    <p>Garner Knowledge in areas of intrest
-                                        <a href="https://www.khanacademy.org/">Khan Academy
-                                        </a>
-                                    </p>
-                                </div>
-                                <div class="template-card" data-template="self-care">
-                                    <i class="fas fa-heart"></i>
-                                    <h4>Self-Care<h4>
-                                        <p>Relax and do something that makes you feel taken care of! Paint your nails, curate a new wardrobe or hug a plushie</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </section>
+                    <div class="template-grid">
+                    <div class="template-card" data-template="Hygiene">
+                        <i class="fas fa-shower"></i>
+                        <h4>Personal Hygiene</h4>
+                            <p>Brush teeth, shower, skincare and get dressed</p>
+                    </div>
+                    <div class="template-card" data-template="Medication and Supplements">
+                        <i class="fas fa-pills"></i>
+                        <h4>Medication and Supplements</h4>
+                            <p>Take any prescribed medications and/or supplements</p>
+                    </div>
+                    <div class="template-card" data-template="exercise">
+                        <i class="fas fa-walking"></i>
+                        <h4>Exercise</h4>
+                            <p>Get that body moving! Dance, walk or stretch. Whatever feels good!</p>
+                    </div>
+                    <div class="template-card" data-template="Social">
+                        <i class="fas fa-users"></i>
+                        <h4>Social Connection</h4>
+                            <p>Try talking to a friend or text a support line because you still deserve to be heard when no one is around.
+                        <a href="https://www.campaigntoendloneliness.org/feeling-lonely/helpful-links/">
+                          Helpful resources 
+                        </a>
+                        </p>
+                    </div>
+                    <div class="template-card" data-template="hobby">
+                        <i class="fas fa-palette"></i>
+                        <h4>Creative Hobbys</h4>
+                            <p> Develop your imaginary skills through drawing, writing or crafts</p>
+                    </div>
+                    <div class="template-card" data-template="learning">
+                        <i class="fas fa-book"></i>
+                        <h4>Learning<h4>
+                            <p>Garner Knowledge in areas of intrest
+                        <a href="https://www.khanacademy.org/">Khan Academy
+                        </a>
+                        </p>
+                    </div>
+                    <div class="template-card" data-template="self-care">
+                        <i class="fas fa-heart"></i>
+                        <h4>Self-Care<h4>
+                            <p>Relax and do something that makes you feel taken care of! Paint your nails, curate a new wardrobe or hug a plushie</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="task-list">
+                <h3>Todays's Tasks</h3>
+                <div id="tasks-container">
+                </div>
+            </div>
+        </section>
+
+        <section id="energy" class="tab-content">
+            <div class="section-header">
+                <h2>Energy Management</h2>
+            <div class="energy-display">
+                <span class="energy-label">Today's Energy:</span>
+                <div class="energy-bar">
+                    <div class="energy-fill" id="energy-fill"></div>
+                </div>
+                <span class="energy-value" id="energy-value">95%</span>
+            </div>
+        </div>
+
+                        
 
 
 
