--- a/index.html/index.html
+++ b/index.html/index.html
@@ -112,6 +112,18 @@
             </div>
         </div>
 
+        <div class="energy-tracking">
+            <h3>Track Energy</h3>
+            <div class="energy-input">
+                <label for="energy-level">Current Energy Level (1-10):</label>
+                <input type="range" id="energy-level" min="1" max="10" value="7">
+                <span id="energy-display">7</span>
+            </div>
+            <button class="btn btn-secondary" is="update-energy">Update Energy</button>
+        </div>
+        
+
+
                         
 
 
