--- a/index.html/index.html
+++ b/index.html/index.html
@@ -121,7 +121,43 @@
             </div>
             <button class="btn btn-secondary" is="update-energy">Update Energy</button>
         </div>
-        
+
+        <div class="Energy-activities">
+            <h3>Rejuvenating Activities</h3>
+            <div class="activity-grid">
+                <div class="activity-card" data-energy="+2">
+                    <i class="fas fa-music"></i>
+                    <h4>Listen to Music</h4>
+                    <p>+2 Energy</p>
+                </div>
+                <div class="activity-card" data-energy="+3">
+                    <i class="fas fa-sun"></i>
+                    <h4>Go Outside</h4>
+                    <p>+3 Energy</p>
+                </div>
+                <div class="activity-card" data-energy="+2">
+                    <i class="fas fa-cookie-bite"></i>
+                    <h4>Enjoy a Snack</h4>
+                    <p>+2 Energy</p>
+                </div>
+                <div class ="activity-card" data-energy="+1">
+                    <i class="fas fa-hand-holding-heart"></i>
+                    <h4>Practice Gratitude</h4>
+                    <p>+1 Enerrgy</p>
+                </div>
+                <div class="activity-card" data-energy="+3">
+                    <i class="fas fa-laugh"></i>
+                    <h4>Watch Funny Videos</h4>
+                    <p>+3 Energy</p>
+                </div>
+                <div class="activity-card" data-energy="+4">
+                    <i class="fas fa-bed"></i>
+                    <h4>Quick Nap</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
                         
