--- a/index.html/index.html
+++ b/index.html/index.html
@@ -158,6 +158,47 @@
         </div>
     </section>
 
+    <section id="emotional-support" class="tab-content">
+        <div class="section-header">
+            <h2>Emotional Support</h2>
+            <button class="btn btn-primary" id="log-emotion-btn">
+                <i class="fas fa-plus"></i> Log Emotional state 
+            </button>
+        </div>
+
+        <div class="emotion-logging">
+            <h3>How are you right now?</h3>
+            <div class="emotion-grid">
+                <div class="emotion-card" data-emotion="Happy">
+                    <i class="fas fa-smile"></i>
+                    <span>Happy</span>
+                </div>
+                <div class="emotion-card" data-emotion="sad">
+                  <i class="fas fa-frown"></i>
+                  <span>Sad</span>
+                </div>
+                <div class="emotion-card" data-emotion="anxious">
+                  <i class="fas fa-exclamation-triangle"></i>
+                  <span>Anxious</span>
+                </div>
+                <div class="emotion-card" data-emotion="angry">
+                  <i class="fas fa-angry"></i>
+                  <span>Angry</span>
+                </div>
+                <div class="emotion-card" data-emotion="tired">
+                  <i class="fas fa-bed"></i>
+                  <span>Tired</span>
+                </div>
+                <div class="emotion-card" data-emotion="calm">
+                  <i class="fas fa-leaf"></i>
+                  <span>Calm</span>
+                </div>
+            </div>
+        </div>
+
+
+
+
 
 
                         
