--- a/frontend/index.html/index.html
+++ b/frontend/index.html/index.html
@@ -14,6 +14,7 @@
                 <div class="header-content">
                     <h1><i class="fas fa-graduation-cap"></i> INSTRUCT</h1>
                     <p class="subtitle"> Instructions for life</p>
+                    <div id="backend-message" class="backend-message">Loading...</div>
                 </div>
             </header>
 
