--- a/frontend/index.html/index.html
+++ b/frontend/index.html/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>INSTRUCT</title>
-        <link rel="stylesheet" href="style.css/style.css">
+        <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </head>
@@ -196,6 +196,25 @@
                 </div>
             </div>
         </div>
+
+    </section>
+
+    <script>
+        fetch('http://localhost:8081/api/hello')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('backend-message').textContent = data;
+            })
+            .catch(error => {
+                console.error('Error fetching data from backend:', error);
+                document.getElementById('backend-message').textContent = 'Error connecting to backend';
+            })
+    </script>
+</body>
+</html>
+
+
+        
 
 
 
