--- a/frontend/index.html
+++ b/frontend/index.html
@@ -219,6 +219,12 @@
             </div>
         </div>
 
+        <div class="coping-mechanisms">
+            <h3>Research-Based Coping Strategies</h3>
+            <div id="coping-suggestions">
+            </div>
+        </div>
+
     </section>
 
     <script src="main.js"></script>
