--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         <div class="app-container">
             <header class="header">
                 <div class="header-content">
-                    <h1><i class="fas fa-graduation-cap"></i> INSTRUCT</h1>
+                    <h1>INSTRUCT</h1>
                     <p class="subtitle"> Instructions for life</p>
                     <div id="backend-message" class="backend-message">Loading...</div>
                 </div>
