--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,11 +24,11 @@
                     <i class="fas fa-tasks"></i>
                     <span>Daily Goals</span>
                 </button>
-                <button class="nav-tab" data-tab="Energy">
+                <button class="nav-tab" data-tab="energy">
                     <i class="fas fa-battery-three-quarters"></i>
                     <span>Energy</span>
                 </button>
-                <button class="nav-tab" data-tab="Emotional-Support">
+                <button class="nav-tab" data-tab="emotional-support">
                     <i class="fas fa-brain"></i>
                     <span>Emotional Support</span>
                 </button>
@@ -294,9 +294,7 @@
             <div id="Certifications-container">
             </div>
          </div>
-      </section>
-   </main>
- </div>
+    </div>
 
  <div id="task-modal" class="modal">
     <div class="modal-content">
@@ -342,7 +340,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="emotion-intensity"Intensity (1-10):</label>
+                <label for="emotion-intensity">Intensity (1-10):</label>
                     <input type="range" id="emotion-intesity" min="1" max="10" value="5">
                     <span id="emotion-intesity-display">5</span>
                 </div>
@@ -357,6 +355,7 @@
     </section>
 
     <script src="main.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
