--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
                 </button>
             </nav>
 
-            <main class="main content">
+            <main class="main-content">
                 <section id="daily-tasks" class="tab-content active">
                     <div class="section-header">
                         <h2>Daily Tasks</h2>
@@ -52,22 +52,22 @@
                     <div class="template-grid">
                     <div class="template-card" data-template="Hygiene">
                         <i class="fas fa-shower"></i>
-                        <h4>Personal Hygiene</h4>
+                        <h4>hygiene</h4>
                             <p>Brush teeth, shower, skincare and get dressed</p>
                     </div>
                     <div class="template-card" data-template="Medication and Supplements">
                         <i class="fas fa-pills"></i>
-                        <h4>Medication and Supplements</h4>
+                        <h4>medication</h4>
                             <p>Take any prescribed medications and/or supplements</p>
                     </div>
                     <div class="template-card" data-template="exercise">
                         <i class="fas fa-walking"></i>
-                        <h4>Exercise</h4>
+                        <h4>exercise</h4>
                             <p>Get that body moving! Dance, walk or stretch. Whatever feels good!</p>
                     </div>
                     <div class="template-card" data-template="Social">
                         <i class="fas fa-users"></i>
-                        <h4>Social Connection</h4>
+                        <h4>social</h4>
                             <p>Try talking to a friend or text a support line because you still deserve to be heard when no one is around.
                         <a href="https://www.campaigntoendloneliness.org/feeling-lonely/helpful-links/">
                           Helpful resources 
@@ -76,12 +76,12 @@
                     </div>
                     <div class="template-card" data-template="hobby">
                         <i class="fas fa-palette"></i>
-                        <h4>Creative Hobbys</h4>
+                        <h4>hobby</h4>
                             <p> Develop your imaginary skills through drawing, writing or crafts</p>
                     </div>
                     <div class="template-card" data-template="learning">
                         <i class="fas fa-book"></i>
-                        <h4>Learning<h4>
+                        <h4>learning</h4>
                             <p>Garner Knowledge in areas of intrest
                         <a href="https://www.khanacademy.org/">Khan Academy
                         </a>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="template-card" data-template="self-care">
                         <i class="fas fa-heart"></i>
-                        <h4>Self-Care<h4>
+                        <h4>self-care</h4>
                             <p>Relax and do something that makes you feel taken care of! Paint your nails, curate a new wardrobe or hug a plushie</p>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                 <input type="range" id="energy-level" min="1" max="10" value="7">
                 <span id="energy-display">7</span>
             </div>
-            <button class="btn btn-secondary" is="update-energy">Update Energy</button>
+            <button class="btn btn-secondary" id="update-energy">
         </div>
 
         <div class="Energy-activities">
@@ -214,7 +214,7 @@
                 </select>
                 <label for="symptom-intensity">Intensity (1-10):</label>
                 <input type="range" id="symptom-intensity" min="1" max="10" value="5">
-                <span id="inetensity-display">5</span>
+                <span id="intensity-display">5</span>
                 <button class="btn btn-secondary" id="log-symptom">Log Symptom</button>
             </div>
         </div>
@@ -260,7 +260,7 @@
                 </div>
                 <div class="job-card" data-job="Cleaner">
                     <i class="fas fa-broom"></i>
-                    <h4>Cleaner</h4>
+                    <h4>care-taker</h4>
                     <p>Cleaning techniques, safety procedures</p>
                     <div class="job-progress">
                         <div class="progress-bar small">
@@ -291,7 +291,7 @@
 
         <div class="certifications">
             <h3>Certifications & Milestones</h3>
-            <div id="Certifications-container">
+            <div id="certifications-container">
             </div>
          </div>
     </div>
