--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,12 +50,12 @@
                     <div class="task-templates">
                         <h3>Task Templates</h3>
                     <div class="template-grid">
-                    <div class="template-card" data-template="Hygiene">
+                    <div class="template-card" data-template="hygiene">
                         <i class="fas fa-shower"></i>
                         <h4>hygiene</h4>
                             <p>Brush teeth, shower, skincare and get dressed</p>
                     </div>
-                    <div class="template-card" data-template="Medication and Supplements">
+                    <div class="template-card" data-template="medication">
                         <i class="fas fa-pills"></i>
                         <h4>medication</h4>
                             <p>Take any prescribed medications and/or supplements</p>
@@ -65,7 +65,7 @@
                         <h4>exercise</h4>
                             <p>Get that body moving! Dance, walk or stretch. Whatever feels good!</p>
                     </div>
-                    <div class="template-card" data-template="Social">
+                    <div class="template-card" data-template="social">
                         <i class="fas fa-users"></i>
                         <h4>social</h4>
                             <p>Try talking to a friend or text a support line because you still deserve to be heard when no one is around.
@@ -121,7 +121,7 @@
                 <input type="range" id="energy-level" min="1" max="10" value="7">
                 <span id="energy-display">7</span>
             </div>
-            <button class="btn btn-secondary" id="update-energy">
+            <button class="btn btn-secondary" id="update-energy">Update Energy</button>
         </div>
 
         <div class="Energy-activities">
@@ -258,9 +258,9 @@
                         <span>0% Complete</span>
                     </div>
                 </div>
-                <div class="job-card" data-job="Cleaner">
+                <div class="job-card" data-job="care-taker">
                     <i class="fas fa-broom"></i>
-                    <h4>care-taker</h4>
+                    <h4>Care-taker</h4>
                     <p>Cleaning techniques, safety procedures</p>
                     <div class="job-progress">
                         <div class="progress-bar small">
@@ -341,8 +341,8 @@
             </div>
             <div class="form-group">
                 <label for="emotion-intensity">Intensity (1-10):</label>
-                    <input type="range" id="emotion-intesity" min="1" max="10" value="5">
-                    <span id="emotion-intesity-display">5</span>
+                    <input type="range" id="emotion-intensity" min="1" max="10" value="5">
+                    <span id="emotion-intensity-display">5</span>
                 </div>
                 <div class="form-group">
                     <label for="emotion-notes">Notes:</label>
