--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,12 +52,12 @@
                     <div class="template-grid">
                     <div class="template-card" data-template="hygiene">
                         <i class="fas fa-shower"></i>
-                        <h4>hygiene</h4>
+                        <h4>Hygiene</h4>
                             <p>Brush teeth, shower, skincare and get dressed</p>
                     </div>
                     <div class="template-card" data-template="medication">
                         <i class="fas fa-pills"></i>
-                        <h4>medication</h4>
+                        <h4>Medication</h4>
                             <p>Take any prescribed medications and/or supplements</p>
                     </div>
                     <div class="template-card" data-template="exercise">
