--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,12 +62,12 @@
                     </div>
                     <div class="template-card" data-template="exercise">
                         <i class="fas fa-walking"></i>
-                        <h4>exercise</h4>
+                        <h4>Exercise</h4>
                             <p>Get that body moving! Dance, walk or stretch. Whatever feels good!</p>
                     </div>
                     <div class="template-card" data-template="social">
                         <i class="fas fa-users"></i>
-                        <h4>social</h4>
+                        <h4>Social</h4>
                             <p>Try talking to a friend or text a support line because you still deserve to be heard when no one is around.
                         <a href="https://www.campaigntoendloneliness.org/feeling-lonely/helpful-links/">
                           Helpful resources 
@@ -76,12 +76,12 @@
                     </div>
                     <div class="template-card" data-template="hobby">
                         <i class="fas fa-palette"></i>
-                        <h4>hobby</h4>
+                        <h4>Hobby</h4>
                             <p> Develop your imaginary skills through drawing, writing or crafts</p>
                     </div>
                     <div class="template-card" data-template="learning">
                         <i class="fas fa-book"></i>
-                        <h4>learning</h4>
+                        <h4>Learning</h4>
                             <p>Garner Knowledge in areas of intrest
                         <a href="https://www.khanacademy.org/">Khan Academy
                         </a>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="template-card" data-template="self-care">
                         <i class="fas fa-heart"></i>
-                        <h4>self-care</h4>
+                        <h4>Self-Care</h4>
                             <p>Relax and do something that makes you feel taken care of! Paint your nails, curate a new wardrobe or hug a plushie</p>
                     </div>
                 </div>
