--- a/frontend/index.html
+++ b/frontend/index.html
@@ -302,6 +302,7 @@
         <span class="close">&times;</span>
         <h3>Create Template Task</h3>
         <form id="task-form">
+            <input type="hidden" id="template-edit-id" value="">
             <div class="form-group">
                 <label for="task-title">Template Title:</label>
                 <input type="text" id="task-title" required>
